@@ -1,3 +1,7 @@
+2002-11-27  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* tools/bicobj2vtk.c: Handle LINES object type.
+
 2002-09-05  Jason Lerch		<jason@bic.mni.mcgill.ca>
 
 	* updated the NEWS file so that make dist works.
